--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
-    "firebase": "^7.9.1",
-    "firebase-admin": "^8.9.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "firebase": "^7.20.0",
+    "firebase-admin": "^8.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "react-slick": "^0.25.2",
     "react-spinkit": "^3.0.0",
     "slick-carousel": "^1.8.1"
